feat:refactor top selling prodact view

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -40,6 +40,60 @@
   border-bottom: 2px solid #041e42;
 }
 
+/* PAGINATION */
+.container .pagionation_box {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container .pagionation_box .pagination_main {
+  width: auto;
+  height: 24px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container .pagination_main .pagination_dot {
+  margin: 0 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.pagination_main img {
+  cursor: pointer;
+}
+
+.container .pagination_dot .dot {
+  width: 20px;
+  height: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50%;
+}
+
+.container .pagination_dot .dot.active {
+  border: 3px solid #112137;
+}
+
+.container .pagination_dot .dot div {
+  width: 4px;
+  height: 4px;
+
+  background: #112137;
+  border-radius: 50%;
+}
+
 .header_frame {
   position: relative;
   margin-top: 47px;
@@ -367,7 +421,7 @@
   flex-direction: column;
 }
 
-.container .prodact_wrapper {
+.selling_prodact_frame .container .prodact_wrapper {
   position: relative;
   margin-top: 30px;
   width: 100%;
@@ -378,17 +432,18 @@
   justify-content: space-between;
 }
 
-.prodact_wrapper .next_prev_box {
+.selling_prodact_frame .prodact_wrapper .next_prev_box {
   width: 25px;
   margin-right: 10px;
 }
 
 .next_prev_box img {
+  cursor: pointer;
   position: absolute;
   top: 50%;
 }
 
-.prodact_wrapper .product_boxes {
+.selling_prodact_frame .prodact_wrapper .product_boxes {
   position: relative;
   width: 1224px;
   height: 452px;
@@ -397,7 +452,7 @@
   flex-direction: row;
 }
 
-.product_boxes .product_box {
+.selling_prodact_frame .product_boxes .product_box {
   width: 306px;
   height: 100%;
 
@@ -405,12 +460,12 @@
   flex-flow: column;
 }
 
-.product_box .product_img_box {
+.selling_prodact_frame .product_box .product_img_box {
   width: 100%;
   height: 280px;
 }
 
-.product_img_box .hover_box {
+.selling_prodact_frame .product_img_box .hover_box {
   display: none;
   width: 100%;
   height: 100%;
@@ -420,7 +475,7 @@
   align-items: center;
 }
 
-.hover_box button {
+.selling_prodact_frame .hover_box button {
   margin-bottom: 10px;
   width: 260px;
   height: 50px;
@@ -438,18 +493,18 @@
   color: #ffffff;
 }
 
-.product_img_box:hover .hover_box {
+.selling_prodact_frame .product_img_box:hover .hover_box {
   display: flex;
 }
 
-.product_box .product_content_box {
+.selling_prodact_frame .product_box .product_content_box {
   padding: 5px 22px;
   width: 100%;
   height: auto;
   box-sizing: border-box;
 }
 
-.product_content_box .product_tite {
+.selling_prodact_frame .product_content_box .product_tite {
   margin-top: 15px;
   font-family: "Jost";
   font-style: normal;
@@ -460,7 +515,7 @@
   color: #626974;
 }
 
-.product_content_box .product_descrption {
+.selling_prodact_frame .product_content_box .product_descrption {
   margin-top: 7px;
   height: 56px;
 
@@ -475,7 +530,7 @@
   color: #041e42;
 }
 
-.product_content_box .review_box {
+.selling_prodact_frame .product_content_box .review_box {
   margin-top: 7px;
 
   display: flex;
@@ -483,11 +538,11 @@
   align-items: center;
 }
 
-.review_box img {
+.selling_prodact_frame .review_box img {
   margin-right: 5px;
 }
 
-.review_box span {
+.selling_prodact_frame .review_box span {
   margin-left: 10px;
   font-family: "Jost";
   font-style: normal;
@@ -498,7 +553,7 @@
   color: #626974;
 }
 
-.product_content_box .price_box {
+.selling_prodact_frame .product_content_box .price_box {
   margin-top: 10px;
 
   display: flex;
@@ -506,7 +561,7 @@
   align-items: center;
 }
 
-.price_box strong {
+.selling_prodact_frame .price_box strong {
   font-family: "Jost";
   font-style: normal;
   font-weight: 500;
@@ -516,7 +571,7 @@
   color: #041e42;
 }
 
-.price_box span {
+.selling_prodact_frame .price_box span {
   margin-left: 10px;
   font-family: "Jost";
   font-style: normal;
@@ -525,56 +580,4 @@
   line-height: 22px;
   text-transform: uppercase;
   color: #626974;
-}
-
-.prodact_pagionation_box {
-  margin-top: 50px;
-  width: 100%;
-  height: auto;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.prodact_pagionation_box .container {
-  flex-direction: row;
-}
-
-.container .finishing_of_page {
-  position: relative;
-  width: 80px;
-  height: 24px;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.prodact_pagionation_box span {
-  width: 20px;
-  height: 20px;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
-  font-weight: bolder;
-  font-size: 20px;
-}
-
-.prodact_pagionation_box .border_span {
-  padding-bottom: 6px;
-  width: 23px;
-  height: 25px;
-
-  box-sizing: border-box;
-  border: 3px solid rgb(17, 33, 55);
-  border-radius: 50%;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
