--- a/public/css/home.css
+++ b/public/css/home.css
@@ -581,3 +581,21 @@
   text-transform: uppercase;
   color: #626974;
 }
+
+.home_page .adv_frame {
+  margin-top: 90px;
+  width: 100%;
+  height: 120px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background: #e5edff;
+
+  font-family: Jost;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 26px;
+  color: #0053f6;
+}
