--- a/public/css/home.css
+++ b/public/css/home.css
@@ -103,6 +103,28 @@
   background: #041e42;
 }
 
+.container .next_prev_box {
+  width: 25px;
+  margin-right: 40px;
+}
+
+.container .next_prev_box img {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+}
+
+.container ._prev_box {
+  width: 25px;
+  margin-left: 40px;
+}
+
+.container ._prev_box img {
+  cursor: pointer;
+  position: absolute;
+  top: 44%;
+}
+
 /* HEADER FRAME */
 
 .header_frame {
@@ -443,17 +465,6 @@
   justify-content: space-between;
 }
 
-.selling_prodact_frame .prodact_wrapper .next_prev_box {
-  width: 25px;
-  margin-right: 10px;
-}
-
-.next_prev_box img {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-}
-
 .selling_prodact_frame .prodact_wrapper .product_boxes {
   position: relative;
   width: 1224px;
@@ -700,10 +711,11 @@
 .space_product_wrapper .small_product_wrapper {
   margin-left: 30px;
   width: 620px;
-  height: 368px;
+  height: 395px;
 
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
@@ -752,4 +764,66 @@
   position: absolute;
   right: 30px;
   bottom: 15px;
+}
+
+/* TV FRAME */
+
+.tv_frame {
+  position: relative;
+  margin-top: 90px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.tv_frame .container {
+  flex-direction: column;
+}
+
+.container .category_top div {
+  display: flex;
+  flex-direction: row;
+}
+
+.catagory_top a {
+  margin-left: 30px;
+}
+
+.container .tv_wrapper {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.tv_wrapper .tv_product_boxes {
+  width: 1300px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.tv_product_boxes .tv_product_box {
+  width: 260px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.product_box .product_img {
+  width: 100%;
+  height: 280px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
