--- a/public/css/command.css
+++ b/public/css/command.css
@@ -22,7 +22,10 @@ p {
 
 /* navbar */
 .navbar_frame {
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: 9999;
+  /* position: relative; */
   width: 100%;
   height: 145px;
   display: flex;
@@ -293,3 +296,228 @@ p {
   color: #ffffffff;
 }
 /* end of the navbar */
+
+/* FOOTER */
+
+.footer_frame {
+  position: relative;
+  padding: 90px 0 20px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background: #f3f5f6;
+}
+.footer_space_title {
+  display: block;
+  margin-bottom: 30px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  color: #041e42;
+}
+
+.footer_frame .container {
+  flex-direction: column;
+}
+
+.container .footer_top {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_top .footer_contact_box {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_contact_box .footer_contact_main {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_contact_main img {
+  width: 35px;
+  height: 30px;
+}
+
+.footer_frame .footer_contact_main div {
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_contact_main div strong {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  color: #041e42;
+}
+
+.footer_frame .footer_contact_main div span {
+  margin-top: 10px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+  color: #041e42;
+}
+
+.footer_frame .footer_support_box {
+  margin-left: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_support_box a {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 40px;
+  color: #041e42;
+}
+
+.footer_frame .footer_media_box {
+  margin-left: 55px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_media_box .footer_media_main {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_media_main .media_box {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .media_box i {
+  margin-right: 25px;
+  font-size: 20px;
+  color: #041e42;
+}
+
+.footer_frame .footer_media_main .mobile_app_box {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.footer_frame .mobile_app_box img {
+  width: 24px;
+  height: 16px;
+}
+
+.footer_frame .mobile_app_box span {
+  margin-left: 20px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  color: #041e42;
+}
+
+.footer_frame .footer_media_box .footer_media_main .card_box {
+  width: 272px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer_frame .container .foooter_bottom {
+  margin-top: 90px;
+  width: 100%;
+  height: 60px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+
+  border-top: 1px solid #eaeaea;
+}
+
+.footer_frame .foooter_bottom .footer_main {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_main .footer_bottom_left {
+  width: 940px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_bottom_left span {
+  width: 280px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 40px;
+  color: #041e42;
+}
+
+.footer_frame .footer_main .footer_bootom_right {
+  margin-right: 70px;
+  margin-top: 5px;
+  width: 450px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer_frame .footer_bootom_right .footer_select_box {
+  padding: 10px 20px;
+  width: 187px;
+  height: 40px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  background: #ffffff;
+  box-sizing: border-box;
+  border: 1px solid #eaeaea;
+  border-radius: 6px;
+}
+
+.footer_frame .footer_select_box span {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+
+  color: #626974;
+}
+
+.footer_frame .footer_select_box select {
+  margin-left: 20px;
+  width: 70px;
+  height: 90%;
+
+  border: none;
+}
