--- a/public/css/home.css
+++ b/public/css/home.css
@@ -827,3 +827,162 @@
   justify-content: center;
   align-items: center;
 }
+
+/* EVENT FRAME */
+.home_page .event_frame {
+  position: relative;
+  margin-top: 90px;
+  width: 100%;
+  height: 632px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  background-image: url("../images/icons/event_bg.png");
+}
+
+.event_frame .container {
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container .evevt_boxs {
+  width: 100%;
+  height: 392px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.evevt_boxs .evevt_left_content_box {
+  margin-right: 50px;
+  width: 340px;
+  height: 214px;
+  margin-top: 50px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.evevt_left_content_box .top_deal_title_title {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 40px;
+  text-transform: capitalize;
+  color: #f7faff;
+}
+
+.evevt_left_content_box .timer_wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.evevt_left_content_box .schedule_wrapper {
+  width: 60px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.schedule_wrapper p {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 40px;
+  text-transform: capitalize;
+  color: #f7faff;
+}
+
+.schedule_wrapper span {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  text-transform: capitalize;
+  color: #f7faff;
+}
+
+.evevt_left_content_box a {
+  position: relative;
+  width: 141.79px;
+  height: 52px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-family: Jost;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+
+  color: #ffffff;
+  background: rgb(245, 195, 75);
+  border-radius: 6px;
+}
+
+.evevt_boxs .event_right_product_box {
+  display: flex;
+  flex-direction: row;
+}
+
+.event_right_product_box .product_img_content_box {
+  margin-right: 10px;
+  width: 206px;
+  height: 392px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #ffffff;
+}
+
+.product_img_content_box .img_box {
+  margin-top: 10px;
+  width: 168px;
+  height: 190px;
+
+  background-image: url("../images/products/sony_notebook.png");
+  border: 2px dashed #cecccc;
+}
+
+.product_img_content_box .product_content_box {
+  width: 168px;
+  height: 149px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.event_frame .product_img_content_box .review_box img {
+  margin-right: 2px;
+}
+
+.event_frame .product_img_content_box .review_box span {
+  font-family: "Jost";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  text-transform: capitalize;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.event_frame .product_img_content_box .product_tite {
+}
+
+.event_frame .product_img_content_box .product_descrption {
+  margin-top: 2px;
+}
