--- a/public/css/home.css
+++ b/public/css/home.css
@@ -831,6 +831,7 @@
 /* EVENT FRAME */
 .home_page .event_frame {
   position: relative;
+  margin-bottom: -59px;
   margin-top: 90px;
   width: 100%;
   height: 632px;
@@ -985,4 +986,12 @@
 
 .event_frame .product_img_content_box .product_descrption {
   margin-top: 2px;
+}
+
+.product_img_content_box a {
+  font-family: "Jost";
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #041e42;
 }
