--- a/public/css/home.css
+++ b/public/css/home.css
@@ -557,7 +557,6 @@
 
   display: flex;
   flex-direction: row;
-  align-items: center;
 }
 
 .selling_prodact_frame .review_box img {
@@ -571,7 +570,7 @@
   font-weight: 400;
   font-size: 13px;
   line-height: 22px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   color: #626974;
 }
 
@@ -964,6 +963,7 @@
 
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .event_frame .product_img_content_box .review_box img {
@@ -972,7 +972,7 @@
 
 .event_frame .product_img_content_box .review_box span {
   font-family: "Jost";
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 22px;
   text-transform: capitalize;
