--- a/public/css/all_products.css
+++ b/public/css/all_products.css
@@ -587,13 +587,13 @@
 .container .pagionation_box .pagination_main {
   margin-top: 20px;
   margin-bottom: 50px;
-  width: auto;
-  height: 24px;
+  width: 460px;
+  height: 50px;
 
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .pagination_main .pagination_first {
